--- a/Maven-Web-Project-master/pom.xml
+++ b/Maven-Web-Project-master/pom.xml
@@ -140,8 +140,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.6.0</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <failonMissingWebXml>false</failonMissingWebXml>
         </configuration>
       </plugin>     
     </plugins>
